--- a/semana19/lama/package.json
+++ b/semana19/lama/package.json
@@ -5,6 +5,10 @@
   "main": "index.ts",
   "author": "Wagner Cardoso",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "start": "ts-node-dev src/index.ts"
+  },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.7",
